--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-leaflet-height-graph",
+  "name": "@symbwell/vue2-leaflet-height-graph",
   "version": "0.3.2",
   "description": "Leaflet.Heightgraph plugin extension for vue2-leaflet package",
   "main": "dist/Vue2LeafletHeightGraph.umd.min.js",
